@@ -1,3 +1,8 @@
+2000-10-14  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* bin/mj_queueserv (in): Triple timeout when waiting for queue
+	runner to start up.
+
 2000-10-11  Jason L Tibbitts III  <tibbs@math.uh.edu>
 
 	* bin/mj_email (connect_no_parse, connect_and_parse): Call
